--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
               <button class="tab" data-tab="ct" role="tab" aria-selected="false">CT Questions</button>
               <button class="tab" data-tab="videos" role="tab" aria-selected="false">Videos</button>
               <button class="tab" data-tab="repos" role="tab" aria-selected="false">Repos</button>
-              <button class="tab" data-tab="favorites" role="tab" aria-selected="false">★ Favorites</button>
+              <button class="tab" data-tab="favorites" role="tab" aria-selected="false">Done list</button>
             </div>
 
             <div class="tabPanel" id="tabPanel" role="tabpanel"></div>
